<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <!-- LOGO -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_desc"
        android:layout_marginBottom="32dp" />



    <!-- Correo -->
    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="16dp" />

    <!-- Contraseña -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="24dp" />

    <!-- Botón Login -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:backgroundTint="#7A4D05"
        android:textColor="#FFFFFF" />
</LinearLayout>
